--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "translate": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
